[package]
name = "protoc-grpcio"
version = "0.1.1"
authors = ["Matt Pelland <matt@pelland.io>"]
license = "Apache-2.0"
keywords = ["compiler", "grpc", "protobuf", "grpc-rs"]
repository = "https://github.com/mtp401/protoc-grpcio"
documentation = "https://docs.rs/protoc-grpcio"
description = """
API for programatically invoking the grpcio (grpc-rs) gRPC compiler
"""

[dependencies]
grpcio-compiler = { git = "https://github.com/pingcap/grpc-rs", rev = "801e160f95c0a90cd45a3540ae85578b0eaec574" }
failure = "0.1"
mktemp = "0.3"
protobuf = "2.0.0"
protoc = "2.0.0"
protobuf-codegen = "2.0.0"
